--- a/strings_and_factors.Rmd
+++ b/strings_and_factors.Rmd
@@ -119,6 +119,238 @@ str_detect(string_vec, "\\[[0-9]")
 
 
 
+## Factors
+
+this is a string variable:
+
+```{r}
+vec_sex = c("male", "male", "female", "female")
+
+vec_sex
+```
+
+this converts to a factor:
+
+```{r}
+vec_sex = factor(c("male", "male", "female", "female"))
+
+vec_sex
+
+as.numeric(vec_sex)
+
+vec_sex = fct_relevel(vec_sex, "male")
+
+vec_sex
+
+as.numeric(vec_sex)
+```
+
+^ indicates that there are two levels, automatically done from a string -> factor conversion. add on `as.numeric` to confirm factor numeric levels. use `fct_relevel` to change the order - since `factor` does alphabetically by default.
+
+^ in general, overwhelming preference is for categorical variables, don't label as "1", "2"... becaues this can get very confusing. use actual, explicit labels so that when you convert to .csv, everyone knows what's happening. use `forcats::` package to do the things you want to do. 
+
+
+## National Survey on Drug Use and Health (NSDUH) example
+
+Reload data from `reading in data from web`. 
+
+```{r}
+nsduh_url = "http://samhda.s3-us-gov-west-1.amazonaws.com/s3fs-public/field-uploads/2k15StateFiles/NSDUHsaeShortTermCHG2015.htm"
+
+table_marj = 
+  read_html(nsduh_url) |> 
+  html_table() |> 
+  first() |>
+  slice(-1)
+
+table_marj
+```
+
+^ this is not a tidy dataset: the columns that contain P values are fundamentally different from the others - they're different? and strange - let's exclude those. Second, age range is a variable and not a column name. There are also two separate variables encoded in column names. Lastly, some values have "a" at the end, which is not usable. 
+
+Clean and tidy the data.
+
+```{r}
+marj_df = 
+  table_marj |> 
+  select(-contains("P Value")) |> 
+  pivot_longer(
+    -State,
+    names_to = "age_year",
+    values_to = "percent"
+  )
+
+marj_df
+```
+
+we're getting somewhere - now we have to separate `age_year` 
+
+```{r}
+marj_df = 
+  table_marj |> 
+  select(-contains("P Value")) |> 
+  pivot_longer(
+    -State,
+    names_to = "age_year",
+    values_to = "percent") |> 
+  separate(age_year, into = c("age", "year"), "\\(") |> 
+  mutate(year = str_replace(year, "\\)", ""))
+
+marj_df
+```
+
+getting better, let's redo `percent` to remove "a" "b"...etc 
+
+```{r}
+marj_df = 
+  table_marj |> 
+  select(-contains("P Value")) |> 
+  pivot_longer(
+    -State,
+    names_to = "age_year",
+    values_to = "percent") |> 
+  separate(age_year, into = c("age", "year"), "\\(") |> 
+  mutate(year = str_replace(year, "\\)", ""),
+         percent = str_replace(percent, "[a-b]", ""))
+
+marj_df
+```
+
+we're getting close!! let's now get rid of states in the following geographic areas:
+
+```{r}
+marj_df = 
+  table_marj |> 
+  select(-contains("P Value")) |> 
+  pivot_longer(
+    -State,
+    names_to = "age_year",
+    values_to = "percent") |> 
+  separate(age_year, into = c("age", "year"), "\\(") |> 
+  mutate(year = str_replace(year, "\\)", ""),
+         percent = str_replace(percent, "[a-b]", ""),
+         percent = as.numeric(percent)) |> 
+  filter(!(State %in% c("Total U.S.", "Northeast", "Midwest", "South", "West")))
+
+marj_df
+```
+
+^ make sure to use `as.numeric` after using `str_replace` to coerce numeric change, needs to happen in order to plot
+
+now let's plot the data. use `mutate` to reorder data from highest to lowest. 
+
+```{r}
+marj_df |>
+  filter(age == "18-25") |> 
+  mutate(State = fct_reorder(State, percent)) |> 
+  ggplot(aes(x = State, y = percent, color = year)) + 
+    geom_point() + 
+    theme(axis.text.x = element_text(angle = 90, hjust = 1))
+```
+
+
+## Restaurant inspections
+
+read in the data. let's understand this data a little more: 
+
+```{r}
+data("rest_inspec")
+
+rest_inspec |> 
+  count(boro, grade) |> 
+  pivot_wider(
+    names_from = grade,
+    values_from = n) |> 
+  knitr::kable()
+```
+
+OR
+
+```{r}
+rest_inspec |> 
+  group_by(boro, grade) |> 
+  summarize(n = n()) |> 
+  pivot_wider(names_from = grade, values_from = n)
+```
+
+now let's get a better understanding: 
+
+```{r}
+inspection_df = 
+  rest_inspec |> 
+  filter(grade %in% c("A", "B", "C"), boro != "Missing") |> 
+  mutate(boro = str_to_title(boro))
+
+inspection_df
+```
+
+let's look at the restaurant grades for some pizza restaurants: 
+
+```{r}
+inspection_df |>
+  filter(str_detect(dba, "Pizza")) |> 
+  count(boro)
+```
+
+(use `inspection_df |> slice(1:50) |> view())` in the console to view a select portion of this dataset to load faster)
+
+```{r}
+inspection_df = 
+  rest_inspec |> 
+  filter(grade %in% c("A", "B", "C"), boro != "Missing") |> 
+  mutate(
+    boro = str_to_title(boro),
+    dba = str_to_upper(dba))
+
+inspection_df |>
+  filter(str_detect(dba, "PIZZA")) |> 
+  count(boro)
+```
+
+^ see what we're looking for in the dataset, make all of the lowercase values in `dba` uppercase so that we can find all the restaurants. there's still probably double counting but it's better than undercounting (from the previous code chunk). 
+
+great! now let's plot the number of pizza restaurants by borough
+
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+```
+
+okay, now let's reorder borough by most frequently observed. 
+
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  mutate(boro = fct_infreq(boro)) |>
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+```
+
+^ `fct_reorder` is the most commonly used, you have some numeric data and you want the numeric data to identify the frequent variables. `fct_infreq` is also used commonly, because it orders the data by which values are most frequently observed
+
+
+now, we love The City. rename "Manhattan" as such. note that the order of the code may cause some problems !! 
+
+```{r}
+inspection_df |> 
+  filter(str_detect(dba, "PIZZA")) |> 
+  mutate(
+    boro = fct_infreq(boro),
+    boro = fct_recode(boro, "The City" = "Manhattan")) |> 
+  ggplot(aes(x = boro, fill = grade)) + 
+  geom_bar()
+```
+
+^ don't use this because it doesn't actually work, and is just messy !! once you code something as a factor variable. if you want to change this, use `fct_recode` instead - once you change a variable to a factor, use factor manipulators to maintain consistency
+
+## go back and do weather data!!!! 
+
+
+
+
+
 
 
 
